k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 9090       # Service port (external)
      targetPort: 9090 # Container port (internal)
  type: NodePort
